<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.alvarezkevin.dice.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/player_1_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="8dp"
        android:text="@string/player_1_default"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/player_2_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_1_text_view"
        android:paddingBottom="8dp"
        android:text="@string/player_2_deafult"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/current_turn_score_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_2_text_view"
        android:text="@string/current_turn_score_default"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/current_player_turn_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dice"
        android:layout_centerHorizontal="true"
        android:paddingBottom="8dp"
        android:textSize="10pt" />


    <ImageView
        android:id="@+id/dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dot_1" />

    <Button
        android:id="@+id/finish_turn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/finish_turn"
        android:textSize="12pt" />

    <TextView
        android:id="@+id/game_over_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textColor="#003db6"
        android:textSize="90dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentRight="true"
        android:text="@string/reset_game"
        android:visibility="gone"
        android:textSize="10pt"/>
</RelativeLayout>
